firejail (0.9.58-1parrot5) testing; urgency=medium

  * Fix torbrowser-launcher sandbox proile.
  * Fix keepassxc sandbox profile.

 -- Lorenzo "Palinuro" Faletra <palinuro@parrotsec.org>  Thu, 14 Feb 2019 02:40:48 +0100

firejail (0.9.58-1parrot4) testing; urgency=medium

  * Fix thunderbird sandbox profile.

 -- Lorenzo "Palinuro" Faletra <palinuro@parrotsec.org>  Wed, 13 Feb 2019 00:05:36 +0100

firejail (0.9.58-1parrot3) testing; urgency=medium

  * Fix several profiles with wrong join-or-start option.
  * Fix firefox widevinecdm support.

 -- Lorenzo "Palinuro" Faletra <palinuro@parrotsec.org>  Thu, 07 Feb 2019 21:53:08 +0100

firejail (0.9.58-1parrot2) testing; urgency=medium

  * Temporarily exclude libreoffice from sandbox (it does not work properly).

 -- Lorenzo "Palinuro" Faletra <palinuro@parrotsec.org>  Wed, 06 Feb 2019 09:01:59 +0100

firejail (0.9.58-1parrot1) testing; urgency=medium

  * Import new Debian release.
  * Remake custom profiles from scratch.
  * Disable applications that don't have to be sandboxed.
  * Enable root user for some editors and utilities.
  * Add VSCodium profile.

 -- Lorenzo "Palinuro" Faletra <palinuro@parrotsec.org>  Tue, 05 Feb 2019 13:29:29 +0100

firejail (0.9.58-1) unstable; urgency=medium

  * New upstream release.
  * Mark github-desktop.profile as moved conffile.
  * Allow ptrace read/readby requests in AppArmor profile.
    Thanks to Salvo Tomaselli for the report and intrigeri for help with
    AppArmor. (Closes: #912587)
  * Restrict networking feature by default in firejail.config, as a new
    network namespace can circumvent packet filter of default namespace.
    Thanks to Alain Ducharme for the report. (Closes: #916920)

 -- Reiner Herrmann <reiner@reiner-h.de>  Sun, 27 Jan 2019 17:09:49 +0100

firejail (0.9.58~rc1-1) experimental; urgency=low

  * New upstream release candidate.
    - fix profile detection when path contains spaces (Closes: #903831)
  * Drop patch applied upstream.