@@ -3,6 +3,6 @@ apparmor-ptrace.patch
 config-hardening.patch
 disable-libreoffice.patch
 parrot-patches.patch
-thunderbird-enable-dbus.patch
 fix-keepassxc.patch
 fix-torbrowser-launcher.patch
+fix-thunderbird.patch
